<resources>
    <string name="app_name">Fit Spirit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calculators">Calculators</string>
    <string name="BMI">BMI</string>
    <string name="calculate_BMI">Oblicz swoje BMI: </string>
    <string name="weight">Waga: </string>
    <string name="height">Wzrost: </string>
    <string name="calculate">OBLICZ</string>
    <string name="enter_weight">Podaj swoją wagę (w kg):</string>
    <string name="enter_height">Podaj swój wzrost (w cm): </string>
    <string name="your_BMI">Twoje BMI wynosi: </string>
    <string name="welcome_text">The power is on your side</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="calculate_WHR">Oblicz swój WHR: </string>
    <string name="enter_waist">Podaj obwód talii (w cm): </string>
    <string name="enter_hip">Podaj obwód bioder (w cm): </string>
    <string name="waist">Obwód talii: </string>
    <string name="hip">Obwód bioder: </string>
    <string name="enter_sex">Podaj swoją płeć:</string>
    <string name="woman">Kobieta</string>
    <string name="man">Mężczyzna</string>
    <string name="title_activity_calculator">Kalkulatory</string>
    <string name="title_activity_tabels">Tabele</string>
    <string name="text_description_whr">Wskaźnik WHR określa sposób dystrybucji w organizmie tkanki tłuszczowej.
        Wskazuje typ otyłości - brzusznej lub pośladkowo-udowej. \n\nUWAGA!\n Nie powinno się go stosować w przypadku
        poprawnej wartości BMI oraz u kobiet w ciąży.</string>
    <string name="text_description_bmi">Wskaźnik BMI pozwala oszacować prawidłowość masy ciała.\n\n UWAGA!\n
    Parametr BMI nie nadaje się do określania masy ciała u osób z dużą ilością tkanki mięśniowej, dzieci do 14 roku życia
    oraz kobiet w ciąży. </string>
    <string name="text_description_gl">Ładunek glikemiczny jest wartością określającą wpływ spożycia danej porcji żywności
    na poziom cukru we krwi. Uwzględnia on nie tylko rodzaj węglowodanów i szybkość wchłaniania, ale również ich
    ilość. Z tego powodu jest wskaźnikiem bardziej dokładnym niż stosowany powszechnie indeks glikemiczny (IG).</string>
    <string name="calculate_gl">Oblicz ładunek glikemiczny: </string>
    <string name="product">Produkt: </string>
   <string name="size_of_portion">Wielkość porcji: </string>
    <string name="enter_size_of_portion">Podaj wielkość porcji(g): </string>

</resources>
