<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BMI_fragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_description_bmi"
            android:layout_width="wrap_content"
            android:layout_height="178dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/text_description_bmi" />

        <TextView
            android:id="@+id/text_your_BMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="8dp"
            android:text="@string/calculate_BMI"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="32dp" />

        <TextView
            android:id="@+id/text_weight_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:text="@string/weight"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="70dp" />

        <EditText
            android:id="@+id/edit_weight_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:background="#f0f0f0"
            android:ems="10"
            android:hint="@string/enter_weight"
            android:inputType="number|numberDecimal"
            tools:layout_editor_absoluteX="227dp"
            tools:layout_editor_absoluteY="47dp" />

        <TextView
            android:id="@+id/text_height_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:text="@string/height"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="129dp" />

        <EditText
            android:id="@+id/edit_height_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:background="#f0f0f0"
            android:ems="10"
            android:hint="@string/enter_height"
            android:inputType="number"
            tools:layout_editor_absoluteX="227dp"
            tools:layout_editor_absoluteY="101dp" />

        <Button
            android:id="@+id/button_calculate_bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="85dp"
            android:text="@string/calculate" />

        <TextView
            android:id="@+id/text_show_bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="3"
            android:text=""
            android:textStyle="bold" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>