<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GL_fragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_description_gl"
                android:layout_width="296dp"
                android:layout_height="192dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:maxLines="20"
                android:paddingTop="10dp"
                android:text="@string/text_description_gl" />

            <TextView
                android:id="@+id/text_calculate_GL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/calculate_gl"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="32dp" />

            <TextView
                android:id="@+id/text_product_gl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="70dp" />

            <Spinner
                android:id="@+id/spinner_gl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_portion_gl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size_of_portion"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="129dp" />

            <EditText
                android:id="@+id/edit_portion_gl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#f0f0f0"
                android:ems="10"
                android:hint="@string/enter_size_of_portion"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="UnusedAttribute"
                tools:layout_editor_absoluteX="227dp"
                tools:layout_editor_absoluteY="101dp" />

            <Button
                android:id="@+id/button_calculate_gl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/calculate" />

            <TextView
                android:id="@+id/text_show_gl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="5"
                android:text=""
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</ScrollView>
